[package]
name = "cloudwatch"
version = "0.1.0"
authors = ["Tim Koopman <tim.koopman@singtel.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
rust-crypto = "0.2.36"
serde_json = "1.0.40"
serde = "1.0.97"
serde_derive = "1.0.97"
chrono = "0.4.7"
chrono-english = "0.1.4"
colored = "1.8"
dirs = "2.0.2"
rusoto_core = "0.40.0"
rusoto_logs = "0.40.0"